--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,159 @@
-orbs:
-    path-filtering: circleci/path-filtering@0.1.3
-setup: true
+commands:
+    dl-and-install:
+        steps:
+            - run: |
+                echo $BKEY>privatekey
+                wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst
+                wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst.sha256sum
+                export CHECKSUM_BI=$(sha256sum linux-amd64.tar.zst|cut -c -64)
+                if [ "$CHECKSUM_BI" != "68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1" ]; then echo -e "bad checksum \n\twanted 68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1\n\tgot $CHECKSUM_BI\n && exit 0"; fi
+                tar xvf linux-amd64.tar.zst && sudo mv linux-amd64/bi /bin
+                cat privatekey| tr -d '\n'|bi pub|tr -d '\n'>publickey
+                echo "signing with publickey: $(cat publickey)"
+                echo "key id: $(cat privatekey|sha256sum|cut -c -64)"
+                bi sign privatekey publickey >publickey.sig
+                echo "test signing public key:"
+                bi verify publickey.sig publickey publickey
+                bi send publickey.sig publickey publickey $TESTING_ARTIFACT_URL
+    fmt-lint:
+        steps:
+            - run: curl -LsSf https://github.com/tamasfe/taplo/releases/download/0.8.0/taplo-full-linux-x86_64.gz | gunzip -N -d - > ${CARGO_HOME:-~/.cargo}/bin/taplo && chmod +x ${CARGO_HOME:-~/.cargo}/bin/taplo
+            - run: rustup run nightly cargo fmt --check
+            - run: taplo fmt --check
+            - run: rustup run nightly cargo clippy -- -D warnings
+    increase-swap:
+        steps:
+            - run: sudo swapoff -a
+            - run: sudo dd if=/dev/zero of=/swapfile bs=1G count=8
+            - run: sudo chmod 0600 /swapfile
+            - run: sudo mkswap /swapfile
+            - run: sudo swapon /swapfile
+            - run: grep Swap /proc/meminfo
+    install-dependencies:
+        steps:
+            - run: sudo sed -i "/#\$nrconf{restart} = 'i';/s/.*/\$nrconf{restart} = 'a';/" /etc/needrestart/needrestart.conf
+            - run: sudo apt-get update
+            - run: sudo apt install -y libssl-dev clang libclang-dev tor && sudo systemctl start tor && sudo systemctl enable tor
+    install-rust:
+        steps:
+            - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+            - run: rustup update nightly
+            - run: rustup update stable
+            - run: rustup component add rustfmt
+            - run: rustup default stable
+            - run: rustup target add wasm32-unknown-unknown --toolchain nightly
+    install-dependencies-and-checkout:
+        steps:
+            - checkout
+            - install-dependencies
+            - dl-and-install
+            - install-rust
+    new-cmd:
+        steps:
+            - run: echo test
+    sign-and-upload:
+        steps:
+            - run: |
+                mkdir -p target/release
+                echo "foo" > target/release/test
+                TARBALL="entropy-$(git tag|tail -n 1)-$(git rev-parse --short HEAD).tar.zst"
+                tar acvf $TARBALL target/release
+                bi -tor=false sign privatekey $TARBALL > $TARBALL.sig
+                bi -tor=false send $TARBALL.sig $TARBALL publickey $TESTING_ARTIFACT_URL > artifact-url
+            - store_artifacts:
+                path: artifact-url
+                destination: artifact-url
+    build-and-test:
+        steps:
+            - run: |
+                pushd node 
+                cargo build --all-targets --release -j $(nproc) 
+                cargo test --all-targets --release
+    crypto-server:
+        steps:
+            - install-dependencies-and-checkout
+            - run: cd crypto/server && cargo test --release
+    fmt-lint-all:
+        steps:
+            - install-dependencies-and-checkout
+            - fmt-lint
+    node-benchmark:
+        steps:
+            - install-dependencies-and-checkout
+            - run: pushd node && cargo check --features=runtime-benchmarks
+    node-test:
+        steps:
+            - increase-swap
+            - install-dependencies-and-checkout
+            - sign-and-upload
+            - build-and-test
+
+jobs:
+    # crypto-server:
+    #     parallelism: 4
+    #     machine:
+    #         image: ubuntu-2204:2022.10.2
+    #         resource_class: 2xlarge
+    #     steps:
+    #         - install-dependencies-and-checkout
+    #         - run: cd crypto/server && cargo test --release
+    # fmt-lint-all:
+    #     parallelism: 4
+    #     machine:
+    #         image: ubuntu-2204:2022.10.2
+    #         resource_class: large
+    #     steps:
+    #         - install-dependencies-and-checkout
+    #         - fmt-lint
+    # node-benchmark:
+    #     parallelism: 4
+    #     machine:
+    #         image: ubuntu-2204:2022.10.2
+    #         resource_class: 2xlarge
+    #     steps:
+    #         - install-dependencies-and-checkout
+    #         - run: pushd node && cargo check --features=runtime-benchmarks
+    full-ci:
+        parallelism: 4
+        machine:
+            image: ubuntu-2204:2022.10.2
+            resource_class: 2xlarge
+        steps:
+            - node-test
+            - crypto-server
+            - fmt-lint-all
+            - node-benchmark
+            # - increase-swap
+            # - install-dependencies-and-checkout
+            # - sign-and-upload
+            # - build-and-test
+parameters:
+    crypto:
+        default: false
+        type: boolean
+    node:
+        default: false
+        type: boolean
+    pallets:
+        default: false
+        type: boolean
+    runtime:
+        default: false
+        type: boolean
 version: 2.1
 workflows:
-    always-run:
+    full-ci:
         jobs:
-            - path-filtering/filter:
-                base-revision: master
-                config-path: .circleci/then.yml
-                mapping: |
-                    node/.* node true
-                    crypto/.* crypto true
-                    pallets/.* pallets true
-                    runtime/.* runtime true
-                name: check-updated-files
-
+            - full-ci
+    #         - fmt-lint-all
+    # node:
+    #     jobs:      
+    #         - node-test
+    #         - node-benchmark
+    #         - crypto-server
+        when:
+            or:
+                - << pipeline.parameters.node >>
+                - << pipeline.parameters.pallets >>
+                - << pipeline.parameters.runtime >>
+                - pipeline.parameters.crypto
