--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -55,6 +55,8 @@ commands:
         steps:
             - run: |
                 OUTDIR="entropy-$(git tag|tail -n 1|sed 's/\./-/g')-$(git rev-parse --short HEAD)" 
+                echo -e "## $(git tag|tail -n 1)-$(git rev-parse --short HEAD)\n" > pr-comment
+                echo -e "\nnice work, looks like everything passed."
                 TARBALL="$OUTDIR.tar.zst" 
                 mkdir -p $OUTDIR
                 echo $TARBALL >$OUTDIR/version
@@ -62,9 +64,28 @@ commands:
                 tar acvf $TARBALL $OUTDIR
                 bi -tor=false sign privatekey $TARBALL > $TARBALL.sig
                 bi -tor=false send $TARBALL.sig $TARBALL publickey https://testing.entropy.family/u ci-latest > artifact-url
+                echo -e "\nyour build artifacts are available [here](cat artifact-url).\n" >> pr-comment
             - store_artifacts:
                 path: artifact-url
                 destination: artifact-url
+    comment-on-pr:
+        steps:
+            - run: |
+                sudo apt-get install jq
+                pr_response=$(curl --location --request GET "https://api.github.com/repos/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pulls?head=$CIRCLE_PROJECT_USERNAME:$CIRCLE_BRANCH&state=open" \
+                -u $GH_USER:$GH_TOKEN)
+                if [ $(echo $pr_response | jq length) -eq 0 ]; then
+                  echo "No PR found to update"
+                else
+                  pr_comment_url=$(echo $pr_response | jq -r ".[]._links.comments.href")
+                fi
+                echo curl --location --request POST "$pr_comment_url" \
+                -u $GH_USER:$GH_TOKEN \
+                --header 'Content-Type: application/json' \
+                --data-raw "'{
+                \"body\": \"$(cat pr-comment)\"
+                }'"
+      
 jobs:
     crypto-server:
         machine:
@@ -98,6 +119,7 @@ jobs:
                 command: pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
                 no_output_timeout: 45m
             - sign-and-upload
+            - comment-on-pr
 parameters:
     crypto:
         default: false
