--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -71,7 +71,7 @@ commands:
     comment-on-pr:
         steps:
             - run: |
-                sudo apt-get install jq
+                # sudo apt-get install jq
                 pr_response=$(curl --location --request GET "https://api.github.com/repos/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pulls?head=$CIRCLE_PROJECT_USERNAME:$CIRCLE_BRANCH&state=open" \
                 -u $GH_USER:$GH_TOKEN)
                 if [ $(echo $pr_response | jq length) -eq 0 ]; then
