/tx starts signing process; tests

--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -36,7 +36,10 @@ tofn              ={ git="https://github.com/entropyxyz/tofn", branch="main" }
 # Entropy
 entropy-shared     ={ path="../shared" }
 kvdb               ={ path="../kvdb", default-features=false }
+
+# Constraints
 entropy-constraints={ path="../constraints" }
+ethers-core="0.13.0"
 
 # Logging
 log               ="0.4.17"                                          # todo: remove, overlaps tracing
