--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -52,6 +52,7 @@ bincode="1.3.3"
 bytes  ={ version="1.0", default-features=false, features=["serde"] }
 base64 ="0.13.0"
 clap   ={ version="4.0.29", features=["derive"] }
+node-primitives       ={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.31" }
 
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
