--- a/crypto/constraints/Cargo.toml
+++ b/crypto/constraints/Cargo.toml
@@ -16,10 +16,12 @@ entropy-shared={ path="../shared", default-features=false }
 sp-core       ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31", default-features=false }
 
 # EVM
-ethers-core="0.13.0"
-rlp        ="0.5.2"
+ethers-core={version="0.13.0", default-features = false}
+rlp        ={version="0.5.2", default-features = false}
 hex        ="0.4.3"
+primitive-types = {version="0.11.1", default-features=false, features=["scale-info", "serde_no_std"]}
+
 
 [features]
 default=["std"]
-std    =["serde/std", "serde_json/std", "entropy-shared/std", "sp-core/std"]
+std    =["serde/std", "serde_json/std", "entropy-shared/std", "sp-core/std", "rlp/std", "primitive-types/std"]
