--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -93,7 +93,33 @@
 					"kind": "bin"
 				}
 			},
-			"args": [],
+			"args": [
+				"--nocapture"
+			],
+			"cwd": "${workspaceFolder}"
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
+			"name": "Debug 'test_unsigned_tx_endpoint'",
+			"cargo": {
+				"args": [
+					"test",
+					"--no-run",
+					"--bin=server",
+					"--package=server",
+					"--features=unsafe"
+				],
+				"filter": {
+					"name": "server",
+					"kind": "bin"
+				}
+			},
+			"args": [
+				"--test",
+				"user::tests::test_unsigned_tx_endpoint",
+				"--nocapture"
+			],
 			"cwd": "${workspaceFolder}"
 		},
 		{
