--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -14,3 +14,5 @@ env_logger        ="0.9.0"
 log               ="0.4.14"
 which             ="4.0.2"
 parity-scale-codec="3.0.0"
+lazy_static       ="1.4.0"
+hex-literal       ="0.3.4"
