--- a/crypto/kvdb/Cargo.toml
+++ b/crypto/kvdb/Cargo.toml
@@ -23,7 +23,8 @@ tokio  ={ version="1.16", features=["macros", "sync", "fs", "rt-multi-thread", "
 tracing={ version="0.1", default-features=false }
 
 # Misc
-sled="0.34.7"
+sled   ="0.34.7"
+bincode="1.3.3"
 
 [dev-dependencies]
 serial_test="0.6.0"
